fixed the layout bug on cart page

--- a/src/Plugins/Theme.Upper49th/Content/css/cart/cart.css
+++ b/src/Plugins/Theme.Upper49th/Content/css/cart/cart.css
@@ -66,6 +66,7 @@
 .checkout-buttons {
     display: inline-flex;
     flex-wrap: nowrap;
+    justify-content: center;
     width: 100%;
 }
 .checkout-buttons .btn {
@@ -314,6 +315,20 @@
     .order-completed-page .jumbotron .display-3 {
         font-size: 56px;
     }
+}
+
+@media (min-width: 992px) and (max-width: 1130px) {
+  .checkout-buttons .btn {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+  }
+
+  .cart-out-container {
+    max-width: 100% !important;
+    flex: 0 0 100% !important;
+  }
 }
 
 @media (max-width: 991px) {
